fix(pf4): added menu portal option for downshift select

--- a/packages/pf4-component-mapper/src/common/select/select-styles.scss
+++ b/packages/pf4-component-mapper/src/common/select/select-styles.scss
@@ -7,6 +7,22 @@
   animation: spin 2s linear infinite;
 }
 
+.ddorg_pf4-component-mapper__select-portal-menu.ddorg_pf4-component-mapper__select-portal-menu-searchable {
+  &::before {
+    position: absolute;
+    bottom: -4px;
+    height: 4px;
+    left: 0;
+    right: 0;
+    background: white;
+    border-bottom-width: var(--pf-global--BorderWidth--sm);
+    border-bottom-color: var(--pf-global--BorderColor--dark-100);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    content: "";
+  }
+}
+
 .ddorg__pf4-component-mapper__select {
   &.single-select {
     .ddorg__pf4-component-mapper__select__placeholder {
